--- a/source/stylesheets/partials/_wireframe.scss
+++ b/source/stylesheets/partials/_wireframe.scss
@@ -61,6 +61,7 @@ img {
       width: 33%;
       position: fixed;
       padding: 0;
+      z-index: 0;
     }
   }
 }
